# TodoList

./: coba.html
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20260714111650_create_table_users.down.sql  20260714111650_create_table_users.up.sql  20260722000000_add_email_verification_indexes.down.sql  20260722000000_add_email_verification_indexes.up.sql
backend/src/: email_template.rs  error.rs  handler.rs  main.rs  model.rs  state.rs  utils.rs
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json
frontend/src/: main.tsx
frontend/src/components/dark_theme/: mode-toggle.tsx  theme-provider.tsx
frontend/src/components/dialog/: dialog-resend-verification.tsx  dialog-success.tsx  dialog-verify-email.tsx
frontend/src/components/form/: login-form.tsx  page-not-found.tsx  register-form.tsx
frontend/src/components/skeleton/: skeleton-login.tsx  skeleton-register.tsx  skeleton-todo.tsx
frontend/src/components/todo/: app-sidebar.tsx  nav-login.tsx  nav-main.tsx  nav-user.tsx  todo-list.tsx
frontend/src/context/: auth-context.tsx
frontend/src/css/: index.css
frontend/src/lib/: api.ts  constants_password.ts  todo-constants.ts  utils.ts
frontend/src/pages/: App.tsx  LayoutForm.tsx  LayoutTodo.tsx
frontend/src/pages/form/: LoginPage.tsx  NotFoundPage.tsx  RegisterPage.tsx
frontend/src/pages/routes/: GuestRoute.tsx  ProtectedRoute.tsx
frontend/src/pages/todo/: TodolistPage.tsx
frontend/src/types/: types-context.ts
