[package]
name = "backend-todolist-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "10.4.0"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4"] }
serde_json = "1.0.91"
config = "0.15.25"
tower-http = { version = "0.7.0", features = ["cors"] }
http = "1.4.2"
