[package]
name = "backend-todolist-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4"] }
serde_json = "1.0.91"
config = "0.15.25"
tower-http = { version = "0.7.0", features = ["cors"] }
http = "1.4.2"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "mysql", "mysql-rsa"] }
bcrypt = "0.19.2"
thiserror = "2.0.18"
sha2 = "0.11.0"
hex = "0.4.3"
resend-rs = "0.28.0"
rand = "0.10.2"
axum-extra = { version = "0.12.6", features = ["cookie"] }
time = "0.3.53"
